--- a/styles2.css
+++ b/styles2.css
@@ -12,10 +12,18 @@ a{
     padding-left: 1.3rem;
     font-size:1.4rem
 }
+nav{
+    background-color: #CFF6FF !important;
+    
+}
+
+/* #header{
+    background: rgb(254,255,148);
+    background: linear-gradient(338deg, rgba(254,255,148,1) 0%, rgba(255,255,255,1) 100%);
+} */
 
 #header{
-    background: rgb(254,255,148);
-background: linear-gradient(338deg, rgba(254,255,148,1) 0%, rgba(255,255,255,1) 100%);
+    background-image: linear-gradient(-225deg, #FFFEFF 0%, #D7FFFE 100%);
 }
 
 #signup-form{
@@ -30,16 +38,20 @@ background: linear-gradient(338deg, rgba(254,255,148,1) 0%, rgba(255,255,255,1) 
     padding-top: 0.8rem;
     padding-bottom: 0.8rem;
     font-size: 1.3rem;
-    background-color:#FF5403;
+    background-color:#00FFF0;
     border: 0
 
 
     
 }
+#signup_btn:hover{
+    background-color: #48F3DB;
+    color: #fff;
+}
 
 #F{
     font-size: 7vw;
-    color: #ffa500;
+    color: #08FFC8;
 
    
 
@@ -52,6 +64,14 @@ background: linear-gradient(338deg, rgba(254,255,148,1) 0%, rgba(255,255,255,1) 
     
 }
 
+#meal_plan{
+    background-image: url(images/meals.jpg);
+    background-size: cover;
+    height: 400px;
+    border-radius:4rem;
+    color: #000;
+}
+
 
 #plate{
    max-width: 100%;
@@ -60,7 +80,12 @@ background: linear-gradient(338deg, rgba(254,255,148,1) 0%, rgba(255,255,255,1) 
 #about{
     background-image: url(images/about.jpg);
     background-size: cover;
+    margin-bottom: 9rem;
 
+}
+#arrow{
+    font-size: 2rem;
+    color: aqua;
 }
 
 
@@ -78,14 +103,14 @@ background: linear-gradient(338deg, rgba(254,255,148,1) 0%, rgba(255,255,255,1) 
 
 
 #chat{
-    background-color:#FF5403;
+    background-color:#08FFC8;
     border-radius: 2rem;
     padding:1rem;
-    color: #fff;
+    color: #000;
 }
 
 #que{
-    background-color: rgb(254,255,148);
+    background-color: #D7FFFE;
     border: 0;
     border-radius:2rem;
     padding: 1.5rem;
@@ -96,13 +121,16 @@ background: linear-gradient(338deg, rgba(254,255,148,1) 0%, rgba(255,255,255,1) 
 }
 
 #card_title{
-    font-size:1.7rem;
-    font-weight: bolder;
+    text-align: center;
+    font-size:1.6rem;
+    font-weight: 480;
     color: #000;
     padding:1.5rem 0 1.5rem 0;
 }
 
-
+.carousel-inner{
+    padding-left: 6rem; padding-right: 6rem
+}
 
 
 #ans{
@@ -112,6 +140,53 @@ background: linear-gradient(338deg, rgba(254,255,148,1) 0%, rgba(255,255,255,1) 
     position: absolute;
 }
 
+#faq-div{
+    background-image: url(images/header2.jpg);
+
+    background-size: cover;
+    border-radius: 2rem;
+    
+    
+}
+
+#faq-sub-div{
+    padding: 2rem;
+    border-radius: 2rem;
+    backdrop-filter: blur(8px);
+}
+
+.nav-link:hover{
+    color: #22EACA !important;
+
+}
+
+
+
+#plate{
+
+    animation: Async_rotate 3s infinite;
+}
+  
+@keyframes Async_rotate {
+50% {transform: rotate(20deg);}
+}
+
+
+#signup-form{
+    
+    animation-name: Hover;
+      animation-duration: 2s;
+      animation-iteration-count: infinite;
+      animation-timing-function: ease-in-out;
+  }
+  
+  @keyframes Hover{
+    0% { transform: translate(0,  0px); }
+    50%  { transform: translate(0, 20px); }
+    100%   { transform: translate(0, -0px); }  
+  }
+
+
 
 @media only screen and (max-width: 600px) {
     #F{
@@ -120,4 +195,9 @@ background: linear-gradient(338deg, rgba(254,255,148,1) 0%, rgba(255,255,255,1) 
     #header_title{
         font-size:8vw;
     }
+
+    .carousel-inner{
+        padding-left: 2rem; padding-right: 2rem
+    }
 }
+
