--- a/styles2.css
+++ b/styles2.css
@@ -30,6 +30,11 @@ nav{
     border-radius: 1.6rem;
     margin-bottom: -20vh;
 }
+#signup_form{
+    border-radius: 1.6rem;
+    width: 100%;
+    /* margin-bottom: -20vh; */
+}
 
 #signup_btn{
     border-radius:1.4rem;
@@ -78,9 +83,11 @@ nav{
 } 
 
 #about{
-    background-image: url(images/about.jpg);
+    padding-top: 5vh;
+    background-image: url(images/client_about.jpeg);
     background-size: cover;
-    margin-bottom: 9rem;
+    padding-bottom: 15vh;
+    color: #fff;
 
 }
 #arrow{
@@ -166,7 +173,16 @@ nav{
 
     animation: Async_rotate 3s infinite;
 }
-  
+
+#signup_container{
+    background-image: url(images/signup.jpeg);
+    padding-top: 10vh;
+    padding-bottom: 10vh;
+    margin-top: 10vh;
+    background-size: cover;
+}
+
+
 @keyframes Async_rotate {
 50% {transform: rotate(20deg);}
 }
